--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,14 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.title {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.search input {
+  border: none;
+  border-bottom: 2px solid #00b2ca;
+  margin-bottom: 15px;
+}
